examples/test/testpolicy3338.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3338
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key45: value21
      key5: value9
      key16: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value7
          key12: value41
      podSelector:
        matchLabels:
          key12: value34
          key38: value49
          key39: value48
